@@ -1,8 +1,4 @@
-/* -*- mode: C; tab-width:8; c-basic-offset:8 -*-
- * vi:set ts=8:
- *
- * sdl.c
- *
+/*
  * SDL backend.
  */
 #include "al_siteconfig.h"
@@ -12,296 +8,328 @@
 #ifndef USE_BACKEND_SDL
 
 void
-alcBackendOpenSDL_ (UNUSED(ALC_OpenMode mode), UNUSED(ALC_BackendOps **ops),
-		    ALC_BackendPrivateData **privateData)
+alcBackendOpenSDL_ (UNUSED (ALC_OpenMode mode), UNUSED (ALC_BackendOps **ops),
+                    ALC_BackendPrivateData **privateData)
 {
-	*privateData = NULL;
+  *privateData = NULL;
 }
 
 #else
 
-#include <AL/al.h>
+/* for memcpy and memset */
 #include <string.h>
+
+/* for the SDL API */
 #include <SDL.h>
 #include <SDL_audio.h>
 
+/* for the LOKI quad format defines */
+#include <AL/alext.h>
+
+/* for _alDebug and related tokens */
 #include "al_debug.h"
-#include "al_main.h"
-#include "alc/alc_context.h"
+
+/* for our dlopen wrapper API */
 #include "al_dlopen.h"
 
+static void SDLCALL (*pSDL_Delay) (Uint32 ms);
+static void SDLCALL (*pSDL_PauseAudio) (int pause_on);
+static void SDLCALL (*pSDL_CloseAudio) (void);
+static int SDLCALL (*pSDL_OpenAudio) (SDL_AudioSpec *desired,
+                                      SDL_AudioSpec *obtained);
+static int SDLCALL (*pSDL_Init) (Uint32 flags);
+static char *SDLCALL (*pSDL_GetError) (void);
+static void SDLCALL (*pSDL_LockAudio) (void);
+static void SDLCALL (*pSDL_UnlockAudio) (void);
 
-#define DEF_SPEED	_ALC_CANON_SPEED
-#define DEF_SIZE	ALC_DEFAULT_DEVICE_BUFFER_SIZE_IN_BYTES
-#define DEF_SAMPLES     (DEF_SIZE / 2)
-#define DEF_CHANNELS	2
-#define SDL_DEF_FMT	AUDIO_S16
-
-static struct {
-	SDL_AudioSpec spec;
-	ALboolean firstTime;
-	ALC_OpenMode mode;
-} sdl_info;
-
-static void *ringbuffer;
-static Uint32 ringbuffersize;
-static Uint32 readOffset;
-static Uint32 writeOffset;
-
-static int openal_load_sdl_library(void);
-
-/*
- * sdl library functions.
- */
-static void SDLCALL (*pSDL_Delay)(Uint32 ms);
-static void SDLCALL (*pSDL_PauseAudio)(int pause_on);
-static void SDLCALL (*pSDL_CloseAudio)(void);
-static int SDLCALL (*pSDL_OpenAudio)(SDL_AudioSpec *desired, SDL_AudioSpec *obtained);
-static int SDLCALL (*pSDL_Init)(Uint32 flags);
-static char* SDLCALL (*pSDL_GetError)(void);
-static void SDLCALL (*pSDL_LockAudio)(void);
-static void SDLCALL (*pSDL_UnlockAudio)(void);
-
-/*
- * sdl library handle.
- */
-static AL_DLHandle sdl_lib_handle = (AL_DLHandle) 0;
-
-static int openal_load_sdl_library(void)
+static ALboolean
+getAPIEntriesSDL (void)
 {
+  static AL_DLHandle libHandle = (AL_DLHandle) 0;
 #ifdef OPENAL_DLOPEN_SDL
-        const char *error = NULL;
+  const char *error = NULL;
 #endif
-    
-	if (sdl_lib_handle != (AL_DLHandle) 0)
-		return 1;  /* already loaded. */
 
-	#ifdef OPENAL_DLOPEN_SDL
-		#define OPENAL_LOAD_SDL_SYMBOL(t, x) p##x = t alDLFunSym_(sdl_lib_handle, #x); \
-                                                   error = alDLError_(); \
-                                                   if (p##x == NULL) { \
-                                                           fprintf(stderr,"Could not resolve SDL symbol %s: %s\n", #x, ((error!=NULL)?(error):("(null)"))); \
-                                                           alDLClose_(sdl_lib_handle); sdl_lib_handle = (AL_DLHandle) 0; \
-                                                           return 0; }
-                alDLError_(); /* clear error state */
-		sdl_lib_handle = alDLOpen_("libSDL.so");
-                error = alDLError_();
-		if (sdl_lib_handle == (AL_DLHandle) 0) {
-                        fprintf(stderr,"Could not open SDL library: %s\n",((error!=NULL)?(error):("(null)")));
-			return 0;
-                }
-	#else
-		#define OPENAL_LOAD_SDL_SYMBOL(t, x) p##x = x;
-		sdl_lib_handle = (AL_DLHandle *) 0xF00DF00D;
-	#endif
+  if (libHandle != (AL_DLHandle) 0)
+    {
+      /* already loaded. */
+      return AL_TRUE;
+    }
 
-	OPENAL_LOAD_SDL_SYMBOL ( (void SDLCALL (*)(Uint32)), SDL_Delay );
-	OPENAL_LOAD_SDL_SYMBOL ( (void SDLCALL (*)(int)), SDL_PauseAudio );
-	OPENAL_LOAD_SDL_SYMBOL ( (void SDLCALL (*)(void)), SDL_CloseAudio );
-	OPENAL_LOAD_SDL_SYMBOL ( (int SDLCALL (*)(SDL_AudioSpec *, SDL_AudioSpec *)), SDL_OpenAudio );
-	OPENAL_LOAD_SDL_SYMBOL ( (int SDLCALL (*)(Uint32)), SDL_Init );
-	OPENAL_LOAD_SDL_SYMBOL ( (char* SDLCALL (*)(void)), SDL_GetError );
-	OPENAL_LOAD_SDL_SYMBOL ( (void SDLCALL (*)(void)), SDL_LockAudio );
-	OPENAL_LOAD_SDL_SYMBOL ( (void SDLCALL (*)(void)), SDL_UnlockAudio );
-
-	return 1;
-}
-
-
-static void
-dummy(UNUSED(void *unused), Uint8 *stream, int len)
-{
-	memcpy_offset(stream, ringbuffer, readOffset, (size_t)len);
-	readOffset += len;
-
-	if(readOffset >= ringbuffersize) {
-		readOffset  = 0;
-		writeOffset = 0;
-	}
-}
-
-static void *
-grab_write_sdl(void)
-{
-	if (!openal_load_sdl_library())
-		return NULL;
-
-        sdl_info.spec.freq     = DEF_SPEED;
-        sdl_info.spec.channels = DEF_CHANNELS;
-        sdl_info.spec.samples  = DEF_SAMPLES;
-        sdl_info.spec.size     = DEF_SIZE;
-        sdl_info.spec.format   = SDL_DEF_FMT;
-        sdl_info.spec.callback = dummy;
-	sdl_info.firstTime     = AL_TRUE;
-	sdl_info.mode          = ALC_OPEN_OUTPUT_;
-
-        if(pSDL_OpenAudio(&sdl_info.spec, NULL) < 0) {
-		/* maybe we need SDL_Init? */
-		pSDL_Init(SDL_INIT_AUDIO);
-
-		if(pSDL_OpenAudio(&sdl_info.spec, NULL) < 0) {
-			_alDebug(ALD_CONTEXT, __FILE__, __LINE__,
-				"No SDL: %s", pSDL_GetError());
-			return NULL;
-		}
+#ifdef OPENAL_DLOPEN_SDL
+#define AL_SYM_SDL_(x, t)                          \
+        p##x = t alDLFunSym_ (libHandle, #x); \
+        error = alDLError_ (); \
+        if (error != NULL) { \
+                alDLClose_ (libHandle); \
+                libHandle = (AL_DLHandle) 0; \
+                return AL_FALSE; \
         }
 
-	if(ringbuffer != NULL) {
-		free(ringbuffer);
-	}
+  alDLError_ ();
+  libHandle = alDLOpen_ ("libSDL.so");
+  error = alDLError_ ();
+  if (error != NULL)
+    {
+      _alDebug (ALD_MAXIMUS, __FILE__, __LINE__,
+                "could not open SDL library: %s", error);
+      return AL_FALSE;
+    }
 
-	ringbuffersize = 2 * sdl_info.spec.size;
-	ringbuffer     = malloc(ringbuffersize);
-	readOffset      = 0;
-	writeOffset     = 0;
+#else
+#define AL_SYM_SDL_(x, t) p##x = x;
+  libHandle = (AL_DLHandle) 0xF00DF00D;
+#endif
 
-	_alDebug(ALD_CONTEXT, __FILE__, __LINE__, "SDL grab audio ok");
+  AL_SYM_SDL_ (SDL_Delay, (void SDLCALL (*)(Uint32)));
+  AL_SYM_SDL_ (SDL_PauseAudio, (void SDLCALL (*)(int)));
+  AL_SYM_SDL_ (SDL_CloseAudio, (void SDLCALL (*)(void)));
+  AL_SYM_SDL_ (SDL_OpenAudio,
+               (int SDLCALL (*)(SDL_AudioSpec *, SDL_AudioSpec *)));
+  AL_SYM_SDL_ (SDL_Init, (int SDLCALL (*)(Uint32)));
+  AL_SYM_SDL_ (SDL_GetError, (char *SDLCALL (*)(void)));
+  AL_SYM_SDL_ (SDL_LockAudio, (void SDLCALL (*)(void)));
+  AL_SYM_SDL_ (SDL_UnlockAudio, (void SDLCALL (*)(void)));
 
-        return &sdl_info.spec;
+  return AL_TRUE;
 }
 
-static void *
-grab_read_sdl(void)
+/* units are in bytes */
+struct sdlData
 {
-	return NULL;
+  SDL_AudioSpec spec;
+  ALboolean firstTime;
+  Uint8 *ringBuffer;
+  Uint32 ringBufferSize;
+  Uint32 readOffset;
+  Uint32 writeOffset;
+};
+
+static void
+pauseSDL (UNUSED (ALC_BackendPrivateData *privateData))
+{
 }
 
 static void
-sdl_blitbuffer(UNUSED(void *handle), const void *data, int bytesToWrite)
+resumeSDL (UNUSED (ALC_BackendPrivateData *privateData))
 {
-	if (sdl_info.firstTime == AL_TRUE) {
-		sdl_info.firstTime = AL_FALSE;
-		offset_memcpy(ringbuffer, writeOffset, data, (size_t)bytesToWrite);
-		writeOffset = bytesToWrite;
-		/* start SDL callback mojo */
-		pSDL_PauseAudio(0);
-	} else {
-		pSDL_LockAudio();
-		while(writeOffset >= ringbuffersize) {
-			pSDL_UnlockAudio();
-			pSDL_Delay(1);
-			pSDL_LockAudio();
-		}
-
-		offset_memcpy(ringbuffer, writeOffset, data, (size_t)bytesToWrite);
-		writeOffset += bytesToWrite;
-
-		pSDL_UnlockAudio();
-	}
 }
 
 static void
-release_sdl(UNUSED(void *handle))
+closeSDL (ALC_BackendPrivateData *privateData)
 {
-	pSDL_CloseAudio();
+  struct sdlData *sd = (struct sdlData *) privateData;
+  free (sd->ringBuffer);
+  pSDL_CloseAudio ();
 }
 
 static ALboolean
-set_write_sdl(UNUSED(void *handle), ALuint *deviceBufferSizeInBytes, ALenum *fmt, ALuint *speed)
+convertFormatFromAL (ALuint *bytesPerFrame, Uint16 *sdlFormat,
+                     Uint8 *numChannels, ALenum alFormat)
 {
-	ALuint bytesPerSample   = _alGetBitsFromFormat(*fmt) >> 3;
-	ALuint channels = _alGetChannelsFromFormat(*fmt);
+  switch (alFormat)
+    {
+    case AL_FORMAT_MONO8:
+      *bytesPerFrame = 1;
+      *sdlFormat = AUDIO_U8;
+      *numChannels = 1;
+      return AL_TRUE;
+    case AL_FORMAT_STEREO8:
+      *bytesPerFrame = 2;
+      *sdlFormat = AUDIO_U8;
+      *numChannels = 2;
+      return AL_TRUE;
+    case AL_FORMAT_QUAD8_LOKI:
+      *bytesPerFrame = 4;
+      *sdlFormat = AUDIO_U8;
+      *numChannels = 4;
+      return AL_TRUE;
+    case AL_FORMAT_MONO16:
+      *bytesPerFrame = 2;
+      *sdlFormat = AUDIO_S16SYS;
+      *numChannels = 1;
+      return AL_TRUE;
+    case AL_FORMAT_STEREO16:
+      *bytesPerFrame = 4;
+      *sdlFormat = AUDIO_S16SYS;
+      *numChannels = 2;
+      return AL_TRUE;
+    case AL_FORMAT_QUAD16_LOKI:
+      *bytesPerFrame = 8;
+      *sdlFormat = AUDIO_S16SYS;
+      *numChannels = 4;
+      return AL_TRUE;
+    default:
+      _alDebug (ALD_MAXIMUS, __FILE__, __LINE__,
+                "uknown OpenAL format 0x%x", alFormat);
+      return AL_FALSE;
+    }
+}
 
-        memset(&sdl_info, '\0', sizeof (sdl_info));
-        sdl_info.spec.freq     = *speed;
-        sdl_info.spec.channels = channels;
-        sdl_info.spec.samples  = *deviceBufferSizeInBytes / bytesPerSample;
-        sdl_info.spec.format   = _al_AL2ACFMT(*fmt);
-        sdl_info.spec.callback = dummy;
-	sdl_info.firstTime     = AL_TRUE;
+static void
+fillAudio (void *userdata, Uint8 *stream, int len)
+{
+  struct sdlData *sd = (struct sdlData *) userdata;
+  memcpy (stream, sd->ringBuffer + sd->readOffset, (size_t) len);
+  sd->readOffset += len;
 
-        pSDL_CloseAudio();
+  if (sd->readOffset >= sd->ringBufferSize)
+    {
+      sd->readOffset = 0;
+      sd->writeOffset = 0;
+    }
+}
 
-        if(pSDL_OpenAudio(&sdl_info.spec, NULL) < 0) {
-		fprintf(stderr,
-			"No SDL: %s\n", pSDL_GetError());
+static ALboolean
+setAttributesSDL (ALC_BackendPrivateData *privateData,
+                  ALuint *deviceBufferSizeInBytes, ALenum *format,
+                  ALuint *speed)
+{
+  struct sdlData *sd = (struct sdlData *) privateData;
+  ALuint bytesPerFrame;
 
-                return AL_FALSE;
+  if (!convertFormatFromAL (&bytesPerFrame, &sd->spec.format,
+                            &sd->spec.channels, *format))
+    {
+      return AL_FALSE;
+    }
+  sd->spec.freq = *speed;
+  /* Note that the field is called "samples", but SDL seems to mean "frames". */
+  sd->spec.samples = *deviceBufferSizeInBytes / bytesPerFrame;
+  sd->spec.callback = fillAudio;
+  sd->spec.userdata = sd;
+  sd->firstTime = AL_TRUE;
+
+  if (pSDL_OpenAudio (&sd->spec, NULL) < 0)
+    {
+      _alDebug (ALD_MAXIMUS, __FILE__, __LINE__, "opening audio failed: %s",
+                pSDL_GetError ());
+      return AL_FALSE;
+    }
+
+  sd->ringBufferSize = 2 * sd->spec.size;
+  sd->ringBuffer = (Uint8 *) malloc (sd->ringBufferSize);
+  if (sd->ringBuffer == NULL)
+    {
+      _alDebug (ALD_MAXIMUS, __FILE__, __LINE__,
+                "failed to allocate ring buffer");
+    }
+  sd->readOffset = 0;
+  sd->writeOffset = 0;
+  memset (sd->ringBuffer, 0, sd->ringBufferSize);
+
+  *deviceBufferSizeInBytes = sd->spec.size;
+  return AL_TRUE;
+}
+
+static void
+writeSDL (ALC_BackendPrivateData *privateData, const void *data,
+          int bytesToWrite)
+{
+  struct sdlData *sd = (struct sdlData *) privateData;
+  if (sd->firstTime == AL_TRUE)
+    {
+      sd->firstTime = AL_FALSE;
+      memcpy (sd->ringBuffer + sd->writeOffset, data, (size_t) bytesToWrite);
+      sd->writeOffset = bytesToWrite;
+      /* start SDL callback mojo */
+      pSDL_PauseAudio (0);
+    }
+  else
+    {
+      pSDL_LockAudio ();
+      while (sd->writeOffset >= sd->ringBufferSize)
+        {
+          pSDL_UnlockAudio ();
+          pSDL_Delay (1);
+          pSDL_LockAudio ();
         }
 
-	*deviceBufferSizeInBytes = sdl_info.spec.size;
+      memcpy (sd->ringBuffer + sd->writeOffset, data, (size_t) bytesToWrite);
+      sd->writeOffset += bytesToWrite;
 
-	if(ringbuffer != NULL) {
-		free(ringbuffer);
-	}
-
-	ringbuffersize = 2 * sdl_info.spec.size;
-	ringbuffer     = malloc(ringbuffersize);
-	readOffset      = 0;
-	writeOffset     = 0;
-
-	memset(ringbuffer, 0, ringbuffersize);
-
-	/* FIXME: should remove extraneous *channels and rely only on format */
-	*fmt      = _al_AC2ALFMT(sdl_info.spec.format, sdl_info.spec.channels);
-	*speed    = sdl_info.spec.freq;
-
-	_alDebug(ALD_CONTEXT, __FILE__, __LINE__, "set_write_sdl ok");
-
-        return AL_TRUE;
-}
-
-static ALboolean
-set_read_sdl(UNUSED(void *handle), UNUSED(ALuint *deviceBufferSizeInBytes), UNUSED(ALenum *fmt),
-	     UNUSED(ALuint *speed))
-{
-	return AL_FALSE;
-}
-
-static ALboolean
-alcBackendSetAttributesSDL_(void *handle, ALuint *deviceBufferSizeInBytes, ALenum *fmt, ALuint *speed)
-{
-	return sdl_info.mode == ALC_OPEN_INPUT_ ?
-		set_read_sdl(handle, deviceBufferSizeInBytes, fmt, speed) :
-		set_write_sdl(handle, deviceBufferSizeInBytes, fmt, speed);
-}
-
-static void
-pause_sdl( UNUSED(void *handle) )
-{
-}
-
-static void
-resume_sdl( UNUSED(void *handle) )
-{
+      pSDL_UnlockAudio ();
+    }
 }
 
 static ALsizei
-capture_sdl( UNUSED(void *handle), UNUSED(void *capture_buffer), UNUSED(int bytesToRead) )
+readSDL (UNUSED (ALC_BackendPrivateData *privateData),
+         UNUSED (void *capture_buffer), UNUSED (int bytesToRead))
 {
-	return 0;
+  _alDebug (ALD_MAXIMUS, __FILE__, __LINE__, "should never happen");
+  return 0;
 }
 
 static ALfloat
-get_sdlchannel( UNUSED(void *handle), UNUSED(ALuint channel) )
+getAudioChannelSDL (UNUSED (ALC_BackendPrivateData *privateData),
+                    UNUSED (ALuint channel))
 {
-	return 0.0;
+  _alDebug (ALD_MAXIMUS, __FILE__, __LINE__,
+            "SDL backend does not getting volume");
+  return 0.0f;
 }
 
 static int
-set_sdlchannel( UNUSED(void *handle), UNUSED(ALuint channel), UNUSED(ALfloat volume) )
+setAudioChannelSDL (UNUSED (ALC_BackendPrivateData *privateData),
+                    UNUSED (ALuint channel), UNUSED (ALfloat volume))
 {
-	return 0;
+  _alDebug (ALD_MAXIMUS, __FILE__, __LINE__,
+            "SDL backend does not setting volume");
+  return 0;
 }
 
 static ALC_BackendOps sdlOps = {
-	release_sdl,
-	pause_sdl,
-	resume_sdl,
-	alcBackendSetAttributesSDL_,
-	sdl_blitbuffer,
-	capture_sdl,
-	get_sdlchannel,
-	set_sdlchannel
+  closeSDL,
+  pauseSDL,
+  resumeSDL,
+  setAttributesSDL,
+  writeSDL,
+  readSDL,
+  getAudioChannelSDL,
+  setAudioChannelSDL
 };
 
 void
-alcBackendOpenSDL_ (ALC_OpenMode mode, ALC_BackendOps **ops, ALC_BackendPrivateData **privateData)
+alcBackendOpenSDL_ (ALC_OpenMode mode, ALC_BackendOps **ops,
+                    ALC_BackendPrivateData **privateData)
 {
-	*privateData = (mode == ALC_OPEN_INPUT_) ? grab_read_sdl() : grab_write_sdl();
-	if (*privateData != NULL) {
-		*ops = &sdlOps;
-	}
+  struct sdlData *sd;
+
+  if (!getAPIEntriesSDL ())
+    {
+      *privateData = NULL;
+      return;
+    }
+
+  if (mode == ALC_OPEN_INPUT_)
+    {
+      _alDebug (ALD_MAXIMUS, __FILE__, __LINE__,
+                "SDL backend does not support input");
+      *privateData = NULL;
+      return;
+    }
+
+  if (pSDL_Init (SDL_INIT_AUDIO) == -1)
+    {
+      _alDebug (ALD_MAXIMUS, __FILE__, __LINE__,
+                "SDL audio initialization failed");
+      *privateData = NULL;
+      return;
+    }
+
+  sd = (struct sdlData *) malloc (sizeof *sd);
+  if (sd == NULL)
+    {
+      _alDebug (ALD_MAXIMUS, __FILE__, __LINE__,
+                "failed to allocate backend data");
+      *privateData = NULL;
+      return;
+    }
+
+  *ops = &sdlOps;
+  *privateData = (ALC_BackendPrivateData *) sd;
+  _alDebug (ALD_CONTEXT, __FILE__, __LINE__,
+            "SDL backend opened successfully");
 }
 
 #endif /* USE_BACKEND_SDL */
